src/test/ui/rfc-2632-const-trait-impl/const-drop.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const-drop.rs:14:9
   |
LL |         panic!("much const drop")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         the evaluated program panicked at 'much const drop', $DIR/const-drop.rs:14:9
   |         inside `<S as Drop>::drop` at $SRC_DIR/std/src/panic.rs:LL:COL
...
LL | const fn a<T: ~const Drop>(_: T) {}
   |                                   - inside `a::<S>` at $DIR/const-drop.rs:19:35
LL | 
LL | const _: () = a(S);
   |               ---- inside `_` at $DIR/const-drop.rs:21:15
   |
  ::: $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
LL | pub unsafe fn drop_in_place<T: ?Sized>(to_drop: *mut T) {
   | ------------------------------------------------------- inside `std::ptr::drop_in_place::<S> - shim(Some(S))` at $SRC_DIR/core/src/ptr/mod.rs:LL:COL
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
